# dmenu

./: .gitignore  CMakeLists.txt  Makefile  config.h  config.mk  dmenu  dmenu.c  dmenu.cpp  dmenu_lib.h  dmenu_path  dmenu_run  drw.cpp  drw.h  stest.cpp
.github/workflows/: arch.yaml  ubuntu20.yaml  ubuntu22.yaml  ubuntu24.yaml
dockerfiles/: Dockerfile.arch  Dockerfile.u20  Dockerfile.u22  Dockerfile.u24
tests/: CMakeLists.txt  dmenu_tests.cpp  drw_tests.cpp
tests/data/: utf8decode.txt.lzma
tests/mocks/: all_mock_class.hpp  cursor.hpp  display.hpp  drawable.hpp  fccharset.hpp  fcpattern.hpp  ft2build.h  gc.hpp  window.hpp  xftcolor.hpp  xftdraw.hpp  xftfont.hpp
tests/mocks/X11/: X.h  Xlib.cpp  Xlib.h  Xutil.h
tests/mocks/X11/Xft/: Xft.h
tests/mocks/X11/extensions/: Xinerama.h
